--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
 		"function.h": "c",
-		"main.h": "c"
+		"main.h": "c",
+		"stdlib.h": "c",
+		"tm1650.h": "c",
+		"24cxx.h": "c"
 	}
 }
